src/components/header/_header.scss
.header {
  background-color: var(--body-background);
  position: sticky;
  top: 0;
  z-index: 1;
  border-bottom: 1px solid var(--gray);

  .logo {
    color: var(--primary-color);
    font-size: 1.5rem;
    font-weight: bold;
  }

  .nav {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    background-color: var(--body-background);
    width: 0;
    overflow: hidden;
    box-shadow: 2px 0 3px var(--gray);
    transition: width 0.2s linear;
    padding-top: 5rem;

    &-links {
      font-size: 1.2rem;
      color: var(--text-secondary);

      & li > * {
        margin-top: 3rem;
        display: flex;
        align-items: center;
        gap: 1rem;
        white-space: nowrap;
        flex-shrink: 0;
      }

      svg {
        flex-shrink: 0;
      }
    }

    .task-link {
      color: var(--text-secondary);
    }
  }

  .nav.show {
    width: 60vw;
  }

  .close-nav {
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
    color: var(--text-secondary);
  }
}

@media screen and (min-width: 769px) {
  .header {
    position: fixed;
    left: 0;
    top: 0;
    flex-direction: column;
    padding-left: 0;
    border-right: 1px solid var(--gray);
    width: 257px;

    .nav {
      position: static;
      width: 100%;
      box-shadow: none;
    }
  }

  .hamburger-menu,
  .close-nav {
    display: none;
  }
}

